--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Test-Range/Temp/__Backupscenes/0.backup
 Test-Range/Temp/FSTimeGet-10febc8dae0455b48a00c6e01eec98d4
 Test-Range/Temp/FSTimeGet-53bd97d668f710d40aed4221fa6aaa61
 Test-Range/Temp/FSTimeGet-5bfe603c71370414389b328168b271bb
+Test-Range/Temp/FSTimeGet-dac2bcf8e6e50e240a6b120b51e97f2b
+Test-Range/Temp/FSTimeGet-a8a2009af94a73641abd7dc60c94fd71
