--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Test-Range/Temp/FSTimeGet-53bd97d668f710d40aed4221fa6aaa61
 Test-Range/Temp/FSTimeGet-5bfe603c71370414389b328168b271bb
 Test-Range/Temp/FSTimeGet-dac2bcf8e6e50e240a6b120b51e97f2b
 Test-Range/Temp/FSTimeGet-a8a2009af94a73641abd7dc60c94fd71
+Test-Range/Temp/FSTimeGet-7d96185457cb06c4fa29ce39c05065ae
+Test-Range/Temp/FSTimeGet-298d59ebb13d7674b8e8d2ba7ba66f93
+Test-Range/Temp/FSTimeGet-1c42976b471e77e4d9ea38106244ba41
